chore: update mockito lib and remove workaround for byte buddy (except of the spin module)