@@ -436,7 +436,7 @@
                 -XX:HeapDumpPath=${project.build.directory}/heap_dump.hprof
                 --add-opens=java.base/java.util=ALL-UNNAMED
                 --add-opens=java.base/java.lang=ALL-UNNAMED
-                -Dnet.bytebuddy.experimental=true</argLine>
+                </argLine>
 				
               <forkCount>1</forkCount>	
             </configuration>
